# code-assembler-pro

./: .gitignore  AGENTS.md  BUILD_AND_RELEASE.md  CHANGELOG.md  INTERACTIVE_MODE.md  LICENSE  QUICKSTART_INTERACTIVE.md  README.md  ROADMAP.md  pyproject.toml
docs/: INTERACTIVE_DEMO.md
examples/: advanced_config.py  basic_usage.py  interactive_demo.py  rebuild_usage.py
src/code_assembler/: __init__.py  __main__.py  analyzers.py  cli.py  compressor.py  config.py  constants.py  core.py  delta.py  file_io.py  formatters.py  interactive.py  rebuilder.py  utils.py
src/code_assembler/templates/: main_header.md.j2
src/code_assembler/templates/components/: architecture.md.j2  file_block.md.j2  readme_context.md.j2  stats_table.md.j2  toc.md.j2
tests/: test_clipboard.py  test_compressor.py  test_config.py  test_core.py  test_delta_scenario.py  test_file_io.py  test_formats.py  test_interactive.py  test_rebuild.py  test_robustness.py  test_utils.py
