[project]
name = "code-assembler-pro"
version = "4.4.0"
description = "Consolidate your codebase into structured Markdown context for LLMs (Claude, GPT, Gemini)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Xavier Mehaut", email = "xavier.mehaute@gmail.com"}
]
keywords = ["llm", "context", "codebase", "markdown", "ai-engineering", "prompt-engineering"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
    "chardet>=5.0.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/xmehaut/code-assembler-pro"
Documentation = "https://github.com/xmehaut/code-assembler-pro#readme"
Repository = "https://github.com/xmehaut/code-assembler-pro"
Issues = "https://github.com/xmehaut/code-assembler-pro/issues"
Changelog = "https://github.com/xmehaut/code-assembler-pro/blob/main/CHANGELOG.md"

[project.scripts]
code-assembler = "code_assembler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
code_assembler = ["templates/*.j2", "templates/components/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"