[project]
name = "code-assembler-pro"
version = "4.5.1"
description = "Consolidate your codebase into structured Markdown context for LLMs (Claude, GPT, Gemini)."
readme = "README.md"
requires-python = ">=3.9"

license = {text = "MIT"}

authors = [
    {name = "Xavier Mehaut", email = "xavier.mehaut@gmail.com"}
]
keywords = ["llm", "context", "codebase", "markdown", "ai-engineering", "prompt-engineering"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
    "chardet>=5.0.0",
    "jinja2>=3.1.0",
]

# ---------------------------------------------------------------------------
# Optional dependencies — Code Compression (--compress / -z)
#
# Python files are ALWAYS supported via stdlib ast — no extra install needed.
# For other languages, install the corresponding tree-sitter package below.
#
# tree-sitter >= 0.21 is required (breaking API change vs 0.20).
# Individual language packages use the new 0.21+ API.
# ---------------------------------------------------------------------------
[project.optional-dependencies]

# Single-language installs — pay only for what you use
compress-js   = ["tree-sitter>=0.21", "tree-sitter-javascript"]
compress-ts   = ["tree-sitter>=0.21", "tree-sitter-typescript"]
compress-rust = ["tree-sitter>=0.21", "tree-sitter-rust"]
compress-go   = ["tree-sitter>=0.21", "tree-sitter-go"]
compress-java = ["tree-sitter>=0.21", "tree-sitter-java"]
compress-c    = ["tree-sitter>=0.21", "tree-sitter-c"]
compress-cpp  = ["tree-sitter>=0.21", "tree-sitter-cpp"]
compress-rb   = ["tree-sitter>=0.21", "tree-sitter-ruby"]
compress-php  = ["tree-sitter>=0.21", "tree-sitter-php"]
compress-cs   = ["tree-sitter>=0.21", "tree-sitter-c-sharp"]

# Bundles — common combinations
compress-web = [
    "tree-sitter>=0.21",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
]
compress-systems = [
    "tree-sitter>=0.21",
    "tree-sitter-rust",
    "tree-sitter-go",
    "tree-sitter-c",
    "tree-sitter-cpp",
]

# Everything — equivalent to the monolithic tree-sitter-languages approach
# but using individual packages with the modern 0.21+ API
compress-all = [
    "tree-sitter>=0.21",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-rust",
    "tree-sitter-go",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-ruby",
    "tree-sitter-php",
    "tree-sitter-c-sharp",
    "tree-sitter-lua",
    "tree-sitter-swift",
    "tree-sitter-kotlin",
    "tree-sitter-scala",
]

[project.urls]
Homepage = "https://github.com/xmehaut/code-assembler-pro"
Documentation = "https://github.com/xmehaut/code-assembler-pro#readme"
Repository = "https://github.com/xmehaut/code-assembler-pro"
Issues = "https://github.com/xmehaut/code-assembler-pro/issues"
Changelog = "https://github.com/xmehaut/code-assembler-pro/blob/main/CHANGELOG.md"

[project.scripts]
code-assembler = "code_assembler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
code_assembler = ["templates/*.j2", "templates/components/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"